--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <div class="jumbotron text-center">
     <div class="container">
   <h2>Meeting Time Calculator</h2>
-  <p>Here is the demo for CMSC 495 Group D.</p>
+  <p>Use this calculator to see how much money is spent in meetings.</p>
   <form class="form-vertical" action="/action_page.php">
     <div class="form-group">
       <label class="control-label col-sm-2" for="duration">Meeting Duration:</label>
