--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -1,12 +1,12 @@
 .jumbotron {
-  background: #532F8C;
+  background: #0080c0;
   color: white;
   padding-bottom: 80px; }
   .jumbotron .btn-primary {
-    background: #845ac7;
-    border-color: #845ac7; }
+    background: #0080c0;
+    border-color: #ffffff; }
     .jumbotron .btn-primary:hover {
-      background: #7646c1; }
+      background: #0080c0; }
   .jumbotron p {
     color: #d9ccee;
     max-width: 75%;
@@ -15,7 +15,7 @@
     margin-top: -20px; }
   .jumbotron .lang-logo {
     display: block;
-    background: #B01302;
+    background: #0080c0;
     border-radius: 50%;
     overflow: hidden;
     width: 100px;
