--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -16,7 +16,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-education"></span> UMUC <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="http://www.umuc.edu/academic-programs/bachelors-degrees/computer-science-major.cfm">UMUC Computer Science</a></li>
+                        <li><a href="http://www.umuc.edu/academic-programs/bachelors-degrees/computer-science-major">UMUC Computer Science</a></li>
                     </ul>
                 </li>
             </ul>
