--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,25 +7,33 @@
     <div class="container">
   <h2>Meeting Time Calculator</h2>
   <p>Use this calculator to see how much money is spent in meetings.</p>
-  <form class="form-vertical" action="/action_page.php">
-    <div class="form-group">
+  <!-- 
+  <form action="/result.html" method="GET">  
+  Username: <input type="text" id="username" /><br/>  
+  Password: <input type="password" id="password" /><br/>  
+  <input type="submit" value="Submit"/>  
+  </form>  
+  -->
+  <form action="/result">
+    <div>
       <label class="control-label col-sm-2" for="duration">Meeting Duration:</label>
-      <div class="col-sm-10">
+      <div class="col-sm-4">
         <input type="number" class="form-control" id="duration" placeholder="Enter meeting duration in minutes" name="duration">
       </div>
     </div>
-    <div class="form-group">
+    <div>
   <label for="sel1">How many times per week do you meet?</label>
-  <select class="form-control" id="freq">
+  <select id="freq">
     <option>1</option>
     <option>2</option>
     <option>3</option>
     <option>4</option>
 	<option>5</option>
   </select>
-      <div class="form-group">
+  </div>
+      <div>
   <label for="sel2">How many people attend your meeting?</label>
-  <select class="form-control" id="attendeeCount">
+  <select id="attendeeCount">
     <option>1</option>
     <option>2</option>
     <option>3</option>
@@ -56,10 +64,10 @@
 <div class="radio">
   <label><input type="radio" name="optradio">One Year</label>
 </div>
- <button type="submit" class="btn btn-default">Calculate Time Spent</button>
+<input type="submit" class="btn btn-default">
   </form>
+  </div>
 </div>
-
 
 </body>
 </html>
